--- a/assets/css/mainstyle.css
+++ b/assets/css/mainstyle.css
@@ -134,7 +134,10 @@
 }
 
 .footer {
-  padding: 200px 0;
+  margin-top: 25px;
+  padding: 25px 0;
+  background-color: #4332c4;
+  color: #fff;
 }
 
 /* phone only */
